--- a/index.html
+++ b/index.html
@@ -23,24 +23,6 @@
 		<script src="js/sorting.js" type="text/javascript"></script>
 		<script src="js/jquery.isotope.js" type="text/javascript"></script>
 		
-
-		<script>
-			jQuery(function(){
-					jQuery('#camera_wrap_1').camera({
-					autoAdvance: false,
-					transPeriod: 500,
-					time: 3000,
-					height: '490px',
-					thumbnails: false,
-					pagination: false,
-					playPause: false,
-					loader: false,
-					navigation: false,
-					hover: false
-				});
-			});
-		</script>
-		
 	</head>
 	<body>
     
@@ -52,7 +34,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="logo col-md-4">
-					<div>
+					<div id="sLogo">
 						<a href="#">
 							<img src="images/logo.png">
 						</a>
@@ -74,13 +56,11 @@
 		<div class="container">
 			<div class="row wrap">
 				<div class="col-md-12 gallery"> 
-						<div class="camera_wrap camera_white_skin" id="camera_wrap_1">
-							<div data-thumb="" data-src="images/slides/blank.gif">
-								<div class="img-responsive camera_caption fadeFromBottom">
-									<h2>Pot Belly Stove Galleria</h2>
-								</div>
-							</div>
-						</div><!-- #camera_wrap_1 -->
+					<div class="camera_warp camera_white_skin" id="camera_wrap_1">
+						<div class="camera_caption">
+							<h2>Pot Belly Stove Galleria</h2>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -511,12 +491,14 @@
                            .addClass("fixed transbg")
                            .fadeIn('fast');
                 });
+				$("#sLogo").show("fast");
             } else if($(this).scrollTop() <= 100 && $menu.hasClass("fixed")) {
                 $menu.fadeOut('fast',function(){
                     $(this).removeClass("fixed transbg")
                            .addClass("default")
                            .fadeIn('fast');
                 });
+				$("#sLogo").hide("fast");
             }
         });
 	});
