updated email to info@pbsg.com

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 							<li><i class="fa fa-home fa-2x"></i>Pot Belly Stove Galleria</li>
 							<li><a href="https://www.google.com/maps/dir//104+NJ-15,+Lafayette+Township,+NJ+07848/@41.09864,-74.6913097,17z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89c36e82c343e037:0xb2b3739774d328a6!2m2!1d-74.689003!2d41.098636?hl=en-US" target="_blank">
 								<i class="fa fa-road fa-2x"></i>104-B, Rt 15, Lafayette, NJ 07848</a></li>
-							<li><i class="fa fa-envelope fa-2x"></i>potbellystovegalleria@gmail.com</li>
+							<li><i class="fa fa-envelope fa-2x"></i>info@potbellystovegalleria.com</li>
 							<!--<li><i class="fa fa-phone fa-2x"></i>999-999-9999</li>-->
 						</ul>	</h3>
 					</div>
