--- a/indexNew.html
+++ b/indexNew.html
@@ -110,31 +110,21 @@
 			<div class="row">
 				<div class="col-md-12 wwa">
 					<span name="about" ></span>
-					<h3>Who We Are? Meet Our Team!</h3>
+					<h3>Who We Are?</h3>
 				</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row team">
-				<div class="col-md-4 b1">
-						<img class="img-responsive" src="images/picTeam/picT1.png">
-						<h4>Donna Gamsby</h4>
-						<h5>Co-Owner</h5>
-				</div>
+
 			
-			
-				<div class="col-md-4">
+				<div class="col-md-12">
 						<img class="img-responsive" src="images/picTeam/picT2.png">
-						<h4>Laurie Einstein</h4>
-						<h5>Co-Owner</h5>
+						<h4>Donna Gamsby</h4>
+						<h5>Owner</h5>
 				</div>
 		
 			
-				<div class="col-md-4 b3">
-						<img class="img-responsive" src="images/picTeam/picT3.png">
-						<h4>Marge Meyer</h4>
-						<h5>Co-Owner</h5>
-				</div>
 			</div>
 		</div>
 		<div class="container">
@@ -231,7 +221,7 @@
 			<div class="portfolio_block columns3   pretty" data-animated="fadeIn">	
 					<div class="element col-sm-4   gall branding">
 						<a class="plS" href="images/prettyPhotoImages/pic1.jpg" rel="prettyPhoto[gallery2]">
-							<img class="img-responsive picsGall" src="images/prettyPhotoImages/thumb_pic1.jpg" alt="pic1 Gallery"/>
+							<img class="img-responsive picsGall" src="images/prettyPhotoImages/thumb_pic1.jpg" alt="Handmade"/>
 						</a>
 						<div class="view vendor_descr ">
 							<h3><a href="#">Recycled Paper - Business Card Mock Up</a></h3>
@@ -353,11 +343,11 @@
 									<i class="fa fa-arrow-down"></i>Load More vendors
 								</a>
 							</li>
-							<li class="buy">
+							<!--<li class="buy">
 								<a href="#">
 									<i class="fa fa-shopping-cart"></i>Buy on Themeforest
 								</a>
-							</li>
+							</li>-->
 						</ul>
 					</div>
 			
