--- a/indexNew.html
+++ b/indexNew.html
@@ -211,7 +211,7 @@
 						<li><a class="selected" href="#filter" data-option-value="*" class="current">All Works</a></li>
 						<li><a href="#filter" data-option-value=".polygraphy">Polygraphy</a></li>
 						<li><a href="#filter" data-option-value=".branding">Branding</a></li>
-						<li><a href="#filter" data-option-value=".web">Web UI</a></li>
+						<li><a href="#filter" data-option-value=".web">Web UIs</a></li>
 						<li><a href="#filter" data-option-value=".text_styles">Text Styles</a></li>
 					</ul>
 				</div><!-- //filter_block -->
